fixed gaps

--- a/css/index.css
+++ b/css/index.css
@@ -328,8 +328,7 @@ input::placeholder {
   .partners__header {
     font-size: 48px;
     letter-spacing: -0.37px;
-    line-height: 56px;
-    margin-bottom: 8px;
+    line-height: 66px;
   }
 
   .partners__description {
